deps/v8/test/message/fail/console.out
console.timeEnd: default, {NUMBER}
console.timeEnd: abcd, {NUMBER}
console.timeEnd: b, {NUMBER}
console.timeEnd: a, {NUMBER}
log more
console.warn: warn 2
console.debug: debug
console.info: info
console.info: *%(basename)s:24: Error: exception
console.info({ toString: () => {throw new Error("exception");} })
                                ^
Error: exception
    at Object.toString (*%(basename)s:24:39)
    at console.info (<anonymous>)
    at *%(basename)s:24:9

